# SortingAlgorithmRuntime

./: CMakeLists.txt  CSV.cpp  CSV.h  Makefile  consistentresultverification.cxx  insertionsort.cpp  insertionsort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  sortedverification.cxx  timealgorithms.cxx
